--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "12.1.1",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
   "devDependencies": {
