--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
@@ -17,10 +18,14 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "12.1.1",
+    "react-native-twilio": "^1.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
