--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "firebase": "^9.17.2",
     "native-base": "^3.4.28",
     "react": "18.2.0",
