--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "12.1.1",
